# holderbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Holder.py  README-fa.md  README.md  README_fa.md  README_ru.md  alembic.ini  config.json  docker-compose.yml  expired.py  holder.py  holderbeta.py  holderbot.py  holderbot.sh  install.sh  installbeta.sh  limiteder.py  main.py  monitoring.py  monitoringbeta.py  node_status_checker.py  pyproject.toml  requirements.txt  restart.sh
.github/workflows/: build.yml  dbuild.yml  quality.yml  tbuild.yml  tests.yml
Function/: admins.py  create.py  db.py  keyboards.py  nodes.py  qr.py  search.py  stase.py  users.py
app/: bot.py  holderbot.py
app/api/: __init__.py  _clinet.py  helpers.py
app/db/: __init__.py  base.py  crud.py  models.py
app/jobs/: __init__.py  scheduler.py  token_updater.py
app/keys/: __init__.py  _callbacks.py  _enums.py  callback.py  keyboard.py  manager.py
app/middlewares/: auth.py
app/models/: __init__.py  action.py  callback.py  server.py  template.py  token.py  user.py
db/: __init__.py  base.py  models.py
jobs/: __init__.py  node_monitoring.py  scheduler.py  token_updater.py
middlewares/: auth.py
models/: __init__.py  callback.py  setting.py  state.py  token.py
plugins/: all_user_info.py  create_bulk_user.py  one_user_info.py  start_message.py
routers/: __init__.py  base.py  node.py  user.py  users.py
settings/: __init__.py
tests/: test_migrations.py
utils/: __init__.py  config.py  helpers.py  keys.py  lang.py  log.py  panel.py  report.py  statedb.py  text_info.py
(+122 files in other folders)
